Project at 80 percent

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poke Quiz Adventure Game</title>
   </head>
-  <body class="bg-white dark:bg-black">
+  <body>
+    <div
+      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-neutral-100 dark:bg-neutral-950 bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)] dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+    ></div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
